CREATE TABLE `position` (
    Position_ID INT PRIMARY KEY AUTO_INCREMENT,
    RA_hour INT,
    RA_minute INT,
    RA_second FLOAT,
    dec_deg INT,
    dec_min INT,
    dec_sec FLOAT
);
